fix wordwrap issue on chrome

--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -127,9 +127,10 @@
       color: #3d3c40;
       font-size: 15px;
       line-height: 22px;
-      word-wrap: break-word;
-    }
 
+      //issues on chrome
+      //word-wrap: break-word;
+    }
   }
 }
 
